# AI-Powered_Landslide_Region_Mapping

./: .gitignore  .gitignore.swp  README.md  app.py  download_models.py  main.py  pyproject.toml  requirements.txt
assets/: README.md
configs/: config.yaml  config.yml
data/: README.md
data/test_data/: jiuzzhaigou_0.2m_UVA0155.tif  jiuzzhaigou_0.2m_UVA0169.tif  jiuzzhaigou_0.2m_UVA0181.tif
data/test_data/CAS_Landslide_Satellite_Test_Data/: Haiti146.tiff  Haiti398.tiff  Haiti_Planet043.tiff  Haiti_Planet286.tiff  Hokkaido0017.tiff  Hokkaido0058.tiff  Hokkaido0586.tiff  Lombok043.tiff  (+8 more)
docs/: presentation.odp  presentation.pptx
experiments/model_training/: 4-training-on-cas-landslide-uav-dataset.ipynb  6-cas-landslide-satellite-cross-validation.ipynb
notebooks/data_analysis/: 1-eda-landslide4sense-dataset.ipynb  2-eda-cas-landslide-dataset-uav.ipynb
notebooks/model_training/: 4-training-on-cas-landslide-uav-dataset.ipynb
research/data_analysis/: 2-eda-cas-landslide-dataset-uav.ipynb  3-eda-cas-landslide-dataset-uav-png.ipynb
research/model_training/: .~1_training_on_Landslide4Sense_data.ipynb  1_training_on_Landslide4Sense_data.ipynb  3-training-on-landslide4sense-modified-dataset.ipynb
src/: .model.py.swp  model.py
src/models/: CASLandslideModel.py  Landslide4SenseModel.py
src/pipeline/: cross_validation.py  export.py  loss.py  test.py  train.py
src/utils/: dataset.py  generate_pdf.py  utils.py
src/views/: home.py  satellite_landslide4sense.py  satellite_landslide_segmentation.py  uav_landslide_segmentation.py
views/: landslide_segmentation.py
(+24 files in other folders)
