[project]
name = "landslide-mapping-from-satellite-imagery"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "h5py>=3.14.0",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "lightning>=2.5.1.post0",
    "matplotlib>=3.10.3",
    "opencv-python>=4.11.0.86",
    "segmentation-models-pytorch",
]

[tool.uv.sources]
segmentation-models-pytorch = { git = "https://github.com/qubvel/segmentation_models.pytorch" }
