[project]
name = "landslide-mapping-from-satellite-imagery"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "h5py>=3.14.0",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "lightning>=2.5.1.post0",
    "matplotlib>=3.10.3",
    "onnx>=1.18.0",
    "onnxruntime>=1.22.1",
    "opencv-python>=4.11.0.86",
    "rasterio>=1.4.3",
    "scikit-image>=0.25.2",
    "seaborn>=0.13.2",
    "segmentation-models-pytorch",
    "streamlit>=1.46.1",
    "streamlit-option-menu>=0.4.0",
    "typer>=0.16.0",
]

[tool.uv.sources]
segmentation-models-pytorch = { git = "https://github.com/qubvel/segmentation_models.pytorch" }
